--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/Index.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/Index.cshtml
@@ -14,6 +14,9 @@
             <a asp-area="Litigation" asp-controller="CaseManage" asp-action="CreateOrUpdate" class="btn bg-success">
                 <i class="fa fa-plus-square"></i> Add New Case
             </a> 
+            @* <a onclick="jQueryModalGet('/client/manageclient/createorupdate','Add Client')" class="btn btn-outline-success">
+                <i class="fa fa-plus-square"></i> Add New Case
+            </a> *@
         }
         <a id="reload" class="btn btn-primary text-white">
             <i class="fa fas fa-bolt"></i>
