--- a/CourtApp.Web/Areas/LawyerDiary/Views/Title/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/Title/_ViewAll.cshtml
@@ -30,24 +30,19 @@
                 </td>
                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Books.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
                 {
-                    @* <td>
-                        <a onclick="jQueryModalGet('/lawyerdiary/Title/OnCreatOrUpdateTitle?id=@bt.Id','Edit Complete Title')"><i class="fas fa-pencil-alt"></i></a>
-                        <form id="form_delete_@bt.Id" asp-area="LawyerDiary" asp-controller="Title" method="post" asp-action="OnTitleDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)" style="margin-left: 20px !important;margin-top: -23px !important;">
-                            <a href="javascript:$('#form_delete_@bt.Id').submit();"><i class="fas fa-trash-alt"></i></a>
-                        </form>
-                    </td> *@
+
                     <td text-right">
                         <div class="btn-group">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Action
                             </button>
                             <div class="dropdown-menu shadow animated--grow-in">
-                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Books.Edit)).Result.Succeeded)
+                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Titles.Edit)).Result.Succeeded)
                                 {
                                     <a onclick="jQueryModalGet('/lawyerdiary/Title/OnCreatOrUpdateTitle?id=@bt.Id','Edit Complete Title')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
 
                                 }
-                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Books.Delete)).Result.Succeeded)
+                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Titles.Delete)).Result.Succeeded)
 
                                 {
                                     <form id="form_delete_@bt.Id" asp-area="LawyerDiary" asp-controller="Title" method="post" asp-action="OnTitleDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
