--- a/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/_ShowCauseNoticeCivil.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/_ShowCauseNoticeCivil.cshtml
@@ -1,25 +1,33 @@
 ﻿@model FmpShowCauseViewModel
-@foreach (var d in Model.ShowCauses)
-{
-    <div style="width:800px; padding-left:100px;page-break-after: always;">
-        <center>
-            <h1>    Notice to Show Cause</h1>
+<div id="printableArea">
+    @foreach (var d in Model.ShowCauses)
+    {
+        foreach (var a in d.Applicants)
+        {
+            <div style="width:800px; padding-left:100px;page-break-after: always;">
+                <center>
+                    <h1>    Notice to Show Cause</h1>
                     [ Appendix H Form 4 ]<br />
-            <strong>
-                In the High Court of Judicature for <br />
-                Rajasthan at Jaipur<br />
-            </strong>
-            <br />
-        </center>
-        Petitioner <strong> @d.Petitioner </strong>	&nbsp;V/s&nbsp;	<strong>@d.Respondent</strong>&nbsp;&nbsp;&nbsp;Respondent	<br />
-        State of Rajasthan
-        <br /><br />
+                    <strong>
+                        In the High Court of Judicature for <br />
+                        Rajasthan at Jaipur<br />
+                    </strong>
+                    <br />
+                </center>
+                Petitioner <strong> @d.Petitioner </strong>	&nbsp;V/s&nbsp;	<strong>@d.Respondent</strong>&nbsp;&nbsp;&nbsp;Respondent	<br />
+                State of Rajasthan
+                <br /><br />
 
-        S.B. Civil Appeal/ Revision No @d.CaseType  &nbsp;&nbsp;<strong>@d.CaseNoYear</strong>  Date. <br />
-            <br />
-            <br />
-            To,<br /><div style="float:right; border:1px solid black; height:30px; width:30px; text-align:center;">@d.FirstTitle, @d.FAddress</div>
-           
+                S.B. Civil Appeal/ Revision No @d.CaseType  &nbsp;&nbsp;<strong>@d.CaseNoYear</strong>  Date. <br />
+                <br />
+                <br />
+                To,<br />
+                @a.Applicant
+                <div style="float:right; border:1px solid black; height:30px; width:30px;
+                    text-align:center;">
+                    @a.ApplicantNo
+                </div>
+
                 <br />
                 <br />
                 <div style="width:100%; line-height:40px; font-size:16px; text-align:justify">
@@ -54,5 +62,7 @@
                     <br />
                 </div>
                 <br />
-    </div>
-}
+            </div>
+        }
+    }
+</div>
